[gd_scene load_steps=5 format=3 uid="uid://c6k5nnpbypshi"]

[ext_resource type="Script" path="res://scenes/MainMenu/MainMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://t2dui8ppm3a4" path="res://scenes/Credits/Credits.tscn" id="3_5dhvp"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/rakugo_game_template/MusicPlayers/BackgroundMusicPlayer.tscn" id="4_w8sbm"]
[ext_resource type="PackedScene" uid="uid://djnvp4x64ukay" path="res://scenes/OptionsMenu/OptionsContainer.tscn" id="6_ky335"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_w8sbm")]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="VersionNumber" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64

[node name="TitlesContainer" type="VBoxContainer" parent="VBoxContainer/HeaderMargin"]
layout_mode = 2

[node name="Game_Title" type="Label" parent="VBoxContainer/HeaderMargin/TitlesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game_SubTitle" type="Label" parent="VBoxContainer/HeaderMargin/TitlesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game Subtitle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"
alignment = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Options
"
alignment = 0

[node name="CreditsButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"
alignment = 0

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
alignment = 0

[node name="CreditsContainer" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_5dhvp")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 1

[node name="OptionsMenu" type="Panel" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="OptionsContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/OptionsMenu/MarginContainer" instance=ExtResource("6_ky335")]
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
dialog_text = "Quit the Game ?"

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
